# get-unique-id-app

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  hooks.ts  natives.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
