[package]
name = "get-unique-id-app"
version = "0.1.0"
description = "Unique ID Generator"
authors = ["hiql<dev.hiql@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "get_unique_id_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.12.1", features = ["v1", "v3", "v4", "v5", "v6", "v7"] }
short-uuid = "0.1.4"
nanoid = "0.4.0"
ulid = "1.1.4"
cuid = "1.3.3"
uguid = "2.2.0"
nuid = "0.5.0"
upid = "0.2.0"
tsid = "0.3.1"
scru128 = "3.1.0"
sonyflake = "0.3.0"
rs-snowflake = "0.6.0"
bson = "2.13.0"
